--- a/Readme
+++ b/Readme
@@ -7,3 +7,4 @@ cd terraform
 terraform init
 terraform plan -var-file=environment/staging.tfvars
 terraform apply -var-file=environment/staging.tfvars
+cd terraform
